Fix nav page thumbnails getting cropped a bit

--- a/src/app/views/pages/home/home.component.scss
+++ b/src/app/views/pages/home/home.component.scss
@@ -78,6 +78,9 @@
                 padding: 25px 30px;
 
                 background-size: cover;
+                -moz-background-size: 100% 100%;
+                -webkit-background-size: 100% 100%;
+                background-size: 100% 100%;
 
                 cursor: pointer;
 
